<resources>
    <string name="app_name">Quick Hands</string>
    <string name="transition_name">zoom</string>
    <string name="ability_to_travel">Ability to travel between buildings</string>
    <string name="add_lumpers">Add Lumpers</string>
    <string name="add_notes">Add Notes</string>
    <string name="update_notes">Update Note</string>
    <string name="update_group_notes">Update Group Note</string>
    <string name="add_signature">Add Signature</string>
    <string name="add_start_time">Add Start Time</string>
    <string name="add_time">Add Time</string>
    <string name="lumper_parameter">Lumper Parameters</string>
    <string name="add_same_start_time_for_all">Add Same Start Time for All</string>
    <string name="approved">Approved</string>
    <string name="availability">Availability</string>
    <string name="availability_header">Availability :</string>
    <string name="back_to_work">Back to Work</string>
    <string name="break_time">Pause Time</string>
    <string name="break_time_s">Pause Time :</string>
    <string name="work_done">Amount of Work Done</string>
    <string name="lumper_cases_text">Portion of cases for this lumper</string>
    <string name="lumper_cases_error">Portion of cases for the lumper should be less than or equal to total cases</string>
    <string name="lumper_profile">Lumper Profile</string>
    <string name="total_cases_text">Total cases</string>
    <string name="building_name">Building Name</string>
    <string name="building_name_lead">Building : </string>
    <string name="building_operations">Building Operations</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_header">Cancel : %s</string>
    <string name="cancel_all_work_schedules">Today\'s Work Cancel</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="cancelled">Cancelled</string>
    <string name="partial">Partial</string>
    <string name="show_more">Show more status</string>
    <string name="show_less">Show less status</string>
    <string name="unfinished">Unfinished</string>
    <string name="unfinished_header">Unfinished : %s</string>
    <string name="not_open">Not-Open</string>
    <string name="not_open_header">Not-Open : %s</string>
    <string name="cancelled_description">(Customer cancelled a scheduled container)</string>
    <string name="psuse_time_description">(Lumper has to pause work on this container to work on another but will return.)</string>
    <string name="cancelled_s">Cancelled: %s</string>
    <string name="change_language">Change Language</string>
    <string name="change_present">Change Present</string>
    <string name="choose_lumpers">Choose Lumpers</string>
    <string name="clear">Clear</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock Out</string>
    <string name="complete">Complete</string>
    <string name="completed">Completed</string>
    <string name="completed_description">(All work on container is done)</string>
    <string name="unfinished_description">(Work started but not finished during this shift)</string>
    <string name="not_done_description">(No work was done on container and shift ended)</string>
    <string name="completed_s">Completed: %s</string>
    <string name="contact_info">Contact Info</string>
    <string name="container_no_s">Container No: %s</string>
    <string name="container_no_bold"><![CDATA[<b>Container #: </b>]]> %s</string>
    <string name="container_details">Container Detail</string>
    <string name="containers">Containers</string>
    <string name="create_new_request">Create A New Request</string>
    <string name="new_request">New Request</string>
    <string name="current_time">Current Time: </string>
    <string name="custom">Custom</string>
    <string name="customer_details">Customer Details</string>
    <string name="customer_note">Customer Note</string>
    <string name="customer_notes">Customer Notes :</string>
    <string name="customer_section">Customer Section</string>
    <string name="customer_report">Customer Report</string>
    <string name="customer_representative_name">Customer Representative Name</string>
    <string name="customer_sheet">Customer Sheet</string>
    <string name="day">Day</string>
    <string name="department">Department</string>
    <string name="department_lead">Dept :</string>
    <string name="department_noraml">Dept: %s</string>
    <string name="title_normal">Title: %s</string>
    <string name="department_full">Department : <![CDATA[<b> %s </b>]]></string>
    <string name="title_lead">Title :</string>
    <string name="dept_bold"><![CDATA[<b>Dept: </b>]]></string>
    <string name="total_container_bold"><![CDATA[<b>Total Containers: </b>]]> %s</string>
    <string name="district_manager_email">DM Email</string>
    <string name="district_manager_name">DM Name</string>
    <string name="door_s">Door: %s</string>
    <string name="door_bold"><![CDATA[<b>Door: </b>]]> %s</string>
    <string name="drops">Drops</string>
    <string name="drop">Drop</string>
    <string name="drop_added">Drop (Added)</string>
    <string name="drops_s">Drops: %s</string>
    <string name="drops_value">Drop: %s</string>
    <string name="unfinished_drop">Unfinished: %s</string>
    <string name="edit_parameters">Edit Parameters</string>
    <string name="email_address">Email Address</string>
    <string name="employee_id">Employee ID</string>
    <string name="employee_id_lead">Employee ID : </string>
    <string name="phone_number_lead">Phone :</string>
    <string name="email_addess_lead">Email :</string>
    <string name="end">End</string>
    <string name="resume">Resume</string>
    <string name="end_time">End Time</string>
    <string name="english">English</string>
    <string name="error">Error</string>
    <string name="excel">Excel</string>
    <string name="quantity">Quantity:</string>
    <string name="first_name">First Name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_question_mark">Forgot Password?</string>
    <string name="full_time">Full Time</string>
    <string name="full_time_ud">Full-Time</string>
    <string name="generate_report">Generate Report</string>
    <string name="hiring_date">Hiring Date</string>
    <string name="in_progress">In-Progress</string>
    <string name="in_progress_description">(Work is in-progress)</string>
    <string name="info">Info</string>
    <string name="job_description">Job Description</string>
    <string name="l_sheet">Lumper Sheet</string>
    <string name="last_day_worked">Last day worked</string>
    <string name="last_name">Last Name</string>
    <string name="live_load_s">Live Load: %s</string>
    <string name="live_load_bold_has"><![CDATA[<b>Live Load: </b>]]> #%s</string>
    <string name="unfinished_live_load_bold_has"><![CDATA[<b>(U)Live Load: </b>]]> #%s</string>
    <string name="live_loads">Live Loads</string>
    <string name="live_load">Live Load</string>
    <string name="live_load_added">Live Load (Added)</string>
    <string name="live_loads_s">Live Loads: %s</string>
    <string name="loading">Loading</string>
    <string name="logout">Log Out</string>
    <string name="lumper_contact">Lumper Contact</string>
    <string name="lumper_details">Lumper Details</string>
    <string name="lumper_sheet_report">Lumper Sheet Report</string>
    <string name="lumper_work_detail">Lumper Work Detail</string>
    <string name="add_container">Add Container</string>
    <string name="lumpers">Lumpers</string>
    <string name="lunch_time">Lunch Time</string>
    <string name="mark_present">Mark Present</string>
    <string name="miles_radius_from_building">Miles radius from primary building</string>
    <string name="month">Month</string>
    <string name="my_profile">My Profile</string>
    <string name="no">No</string>
    <string name="no_of_drops_s">Drop: %s</string>
    <string name="no_of_drops_bold"><![CDATA[<b>Drop:</b>]]> %s</string>
    <string name="no_of_drops_bold_has"><![CDATA[<b>Drop:</b>]]> #%s</string>
    <string name="unfinished_no_of_drops_bold_has"><![CDATA[<b>(U)Drop:</b>]]> #%s</string>
    <string name="no_time_logged_in_yet">No time logged in yet</string>
    <string name="note">Note</string>
    <string name="note_header">Note :</string>
    <string name="notes">Notes</string>
    <string name="group_notes">Group Notes</string>
    <string name="group_note">Group Note :</string>
    <string name="group_note_header">Group Note</string>
    <string name="notifications">Notifications</string>
    <string name="ok">OK</string>
    <string name="on_hold">On-Hold</string>
    <string name="on_hold_description">(Work started but temporary pause)</string>
    <string name="ongoing">Ongoing</string>
    <string name="ongoing_s">Ongoing: %s</string>
    <string name="out_bound_s">Outbound:  %s</string>
    <string name="out_bound_bold_has"><![CDATA[<b>Outbound:</b>]]> #%s</string>
    <string name="unfinished_out_bound_bold_has"><![CDATA[<b>(U)Outbound:</b>]]> #%s</string>
    <string name="out_bounds">Outbounds</string>
    <string name="out_bound">Outbound</string>
    <string name="out_bound_added">Outbound (Added)</string>
    <string name="out_bounds_s">Outbounds: %s</string>
    <string name="out_to_lunch">Out to Lunch</string>
    <string name="parameters">Parameters</string>
    <string name="part_time">Part Time</string>
    <string name="part_time_ud">Part-Time</string>
    <string name="pdf">PDF</string>
    <string name="pending">Pending</string>
    <string name="phone_number">Phone Number</string>
    <string name="present">Present</string>
    <string name="press_back_again_to_exit">Press back again to exit!</string>
    <string name="primary_building">Primary Building</string>
    <string name="refresh">Refresh</string>
    <string name="rejected">Rejected</string>
    <string name="not_approved">Not Approved</string>
    <string name="report_type">Report Type:</string>
    <string name="reports">Reports</string>
    <string name="reset_password">Reset Password</string>
    <string name="request_lumpers">Request Lumpers</string>
    <string name="requested_maded_s"><![CDATA[<b> Requested Maded:</b>]]> %s</string>
    <string name="requested_lumpers_s">Requested Lumpers: %s</string>
    <string name="role">Role</string>
    <string name="role_lead">Role : </string>
    <string name="lead">Lead</string>
    <string name="save">Save</string>
    <string name="schedule">Work Schedule</string>
    <string name="bulk_action">Bulk Action</string>
    <string name="scheduled">Scheduled</string>
    <string name="schedule_s">Schedule</string>
    <string name="not_opens">NOTOPEN</string>
    <string name="scheduled_description">(Work on container has not started)</string>
    <string name="scheduled_time_s">Scheduled Time: %s</string>
    <string name="schedule_detail">Work Schedule Detail</string>
    <string name="schedule_lumpers">Schedule Lumpers</string>
    <string name="scheduled_lumpers">Scheduled Lumpers</string>
    <string name="select_date_range">Select Date Range</string>
    <string name="start">Start</string>
    <string name="start_time_s">Start Time: %s</string>
    <string name="submit">Submit</string>
    <string name="to">-</string>
    <string name="update_request">Update Request</string>
    <string name="week">Week</string>
    <string name="note_for_requested_lumper">Note for Requested Lumpers:</string>
    <string name="lumpers_dm_assigned">Lumpers DM Assigned: %s</string>
    <string name="request_help_message"><![CDATA[Enter Number of Lumpers and Notes for DM.]]></string>
    <string name="no_of_lumpers_needed">No. of Additional Lumpers Needed</string>
    <string name="notes_for_customer">Notes for Customer</string>
    <string name="notes_for_qhl">Notes for QHL</string>
    <string name="notes_for_qhl_dm">Notes for QHL District Manager</string>
</resources>