<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/schedule_item_background"
    android:paddingStart="@dimen/_10sdp"
    android:paddingTop="@dimen/_10sdp"
    android:paddingBottom="@dimen/_5sdp"
    android:paddingEnd="@dimen/_10sdp">

    <TextView
        android:id="@+id/textViewStatus"
        style="@style/baseChipTheme"
        android:layout_marginEnd="@dimen/_4sdp"
        android:background="@drawable/chip_background_on_hold"
        android:text="@string/pending"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRequestedLumpersCount"
        style="@style/titleBigTextViewTheme"
        android:layout_width="0dp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:clickable="false"
        android:text="@string/requested_lumpers_s"
        app:layout_constraintEnd_toStartOf="@+id/textViewStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRequestedAt"
        style="@style/valuesSmallTextViewTheme"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/requested_maded_s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRequestedLumpersCount" />

    <LinearLayout
        android:id="@+id/linearLayoutNotes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/notes_item_background"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewRequestedAt"
        app:layout_goneMarginBottom="@dimen/_10ssp">

        <TextView
            style="@style/titleSmallerTextViewTheme"
            android:text="@string/notes_for_qhl_dm"
            android:textColor="@color/scheduleDetail" />

        <TextView
            android:id="@+id/textViewNote"
            style="@style/valuesSmallTextViewTheme"
            android:layout_marginTop="@dimen/_2sdp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/request_help_message" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewRequestStart"
        style="@style/valuesSmallTextViewTheme"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/start_time_s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutNotes" />

    <TextView
        android:id="@+id/textViewNoteForLumper"
        style="@style/noteTextViewTheme"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:textColor="@color/scheduleDetail"
        android:text="@string/note_for_requested_lumper"
        android:textStyle="bold"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRequestStart" />

    <TextView
        android:id="@+id/textViewLumperAssigned"
        style="@style/valuesSmallTextViewTheme"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:text="@string/lumpers_dm_assigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNoteForLumper" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTempLumperInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginHorizontal="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textViewUpdateRequest"
        app:layout_constraintTop_toBottomOf="@+id/textViewLumperAssigned"/>

    <TextView
        android:id="@+id/textViewUpdateRequest"
        style="@style/addTextViewTheme"
        android:layout_width="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:drawableStart="@drawable/edit_icon_selector"
        android:text="@string/update_request"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewCancelRequest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewTempLumperInfo" />

    <TextView
        android:id="@+id/textViewCancelRequest"
        style="@style/addTextViewTheme"
        android:layout_width="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:drawableStart="@drawable/cancel_icon_selector"
        android:text="@string/cancel_request"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewUpdateRequest"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewTempLumperInfo" />
</androidx.constraintlayout.widget.ConstraintLayout>