<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewReportType"
        style="@style/titleTextViewTheme"
        android:layout_width="wrap_content"
        android:layout_marginStart="@dimen/_10ssp"
        android:layout_marginEnd="@dimen/_10ssp"
        android:text="@string/report_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupReportType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10ssp"
        android:layout_marginEnd="@dimen/_6ssp"
        android:checkedButton="@id/radioButtonPdf"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textViewReportType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewReportType"
        app:layout_constraintTop_toTopOf="@+id/textViewReportType">

        <RadioButton
            android:id="@+id/radioButtonPdf"
            style="@style/valuesTextViewTheme"
            android:layout_width="wrap_content"
            android:text="@string/pdf" />

        <RadioButton
            android:id="@+id/radioButtonExcel"
            style="@style/valuesTextViewTheme"
            android:layout_width="wrap_content"
            android:text="@string/excel" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>